# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: my-check.yml
gendiff/: __init__.py
gendiff/logics/: file_comparison.py  file_reading.py
gendiff/logics/format/: deep.py  plain.py
gendiff/scripts/: __init__.py  check.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: deep_file3.json  deep_file4.json  deep_file4.yml  expected_json_format.json  expected_plain_for_flat.txt  expected_stylish_yaml.txt  expected_yaml.txt  expected_yml.txt  file1.yaml  file2.yml
